# soundcheck

./: CHANGELOG.md  Cargo.toml  readme.md
.github/workflows/: release.yaml
src/: main.rs
src/audio/: audio.rs  gtts.rs  mod.rs  siggen.rs
src/nebula/: mod.rs  nebula.rs
src/utils/: utils.rs
